--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "simple-drag",
-  "version": "0.1.0",
-  "private": true,
-  "module": "lib/index.esm.js",
-  "license": "MIT",
+  "name": "simple-drag-pkg",
+  "version": "0.1.4",
+  "private": false,
+  "module": "lib/simple-drag-pkg.esm.js",
+  "main": "lib/simple-drag-pkg.umd.js",
+  "license": "ISC",
   "author": {
     "name": "huangwantong",
     "email": "965002107@qq.com"
@@ -13,17 +14,20 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "lint:fix": "eslint --fix . --ext .vue,.js,.ts,.jsx,.tsx && pretty-quick --branch dev",
-    "build": "yarn build:clean && yarn build:lib && yarn build:esm-bundle && rimraf lib/demo.html",
-    "build:clean": "rimraf lib",
-    "build:lib": "vue-cli-service build --target lib --name index --dest lib packages/index.ts",
-    "build:esm-bundle": "rollup --config ./build/rollup.config.js"
+    "build": "yarn clean && yarn build:esm && yarn build:umd",
+    "build:esm": "rollup --config build/rollup.esm.config.js",
+    "build:umd": "rollup --config build/rollup.umd.config.js",
+    "clean": "rimraf ./lib"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.6.5"
+  },
+  "peerDependencies": {
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -36,19 +40,19 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.2.1",
-    "rollup": "^2.58.0",
+    "rimraf": "^3.0.2",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-less": "^1.1.3",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-typescript2": "^0.31.1",
     "rollup-plugin-vue": "^6.0.0",
     "typescript": "~4.1.5",
+    "vue": "^3.0.0",
     "vue-jest": "^5.0.0-0"
   }
 }
