--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     ],
     "paths": {
       "~/*": [
-        "packages/*"
+        "src/*"
       ]
     },
     "lib": [
@@ -28,12 +28,9 @@
     ]
   },
   "include": [
-    "examples/**/*.ts",
-    "examples/**/*.tsx",
-    "examples/**/*.vue",
-    "packages/**/*.ts",
-    "packages/**/*.tsx",
-    "packages/**/*.vue",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
