--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "simple-drag-pkg",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "private": false,
   "module": "lib/simple-drag-pkg.esm.js",
   "main": "lib/simple-drag-pkg.umd.js",
+  "types": "",
   "license": "ISC",
   "author": {
     "name": "huangwantong",
@@ -17,7 +18,8 @@
     "build": "yarn clean && yarn build:esm && yarn build:umd",
     "build:esm": "rollup --config build/rollup.esm.config.js",
     "build:umd": "rollup --config build/rollup.umd.config.js",
-    "clean": "rimraf ./lib"
+    "clean": "rimraf ./lib",
+    "prepublishOnly": "npm run lint && npm run test:unit && npm run build"
   },
   "dependencies": {
     "core-js": "^3.6.5"
@@ -44,6 +46,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "husky": "^4.3.8",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.2.1",
@@ -54,5 +57,10 @@
     "typescript": "~4.1.5",
     "vue": "^3.0.0",
     "vue-jest": "^5.0.0-0"
+  },
+  "husky": {
+    "hook": {
+      "pre-commit": "npm run lint && npm run test:unit"
+    }
   }
 }
