--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build:esm": "rollup --config build/rollup.esm.config.js",
     "build:umd": "rollup --config build/rollup.umd.config.js",
     "clean": "rimraf ./lib",
-    "prepublishOnly": "npm run lint && npm run test:unit && npm run build"
+    "prepublishOnly": "npm run lint && npm run test:unit && npm run build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "core-js": "^3.6.5"
@@ -46,7 +47,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "husky": "^4.3.8",
+    "husky": "^7.0.4",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.2.1",
@@ -57,10 +58,5 @@
     "typescript": "~4.1.5",
     "vue": "^3.0.0",
     "vue-jest": "^5.0.0-0"
-  },
-  "husky": {
-    "hook": {
-      "pre-commit": "npm run lint && npm run test:unit"
-    }
   }
 }
