--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
   - node
+
+deploy:
+  provider: npm
+  email: 965002107@qq.com
+  skip_cleanup: true
+  api_key: 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
+  on:
+    tags: true
